Added many-to-many relationship between student groups and subjects
