# server/src/main/java/de/uftos/dto/StudentGroupRequestDto.java
@@ -15,13 +15,15 @@ import java.util.List;
  */
 public record StudentGroupRequestDto(@NotEmpty String name, @NotNull List<String> studentIds,
                                      @NotNull List<String> gradeIds,
-                                     @NotNull List<String> tagIds) {
+                                     @NotNull List<String> tagIds,
+                                     @NotNull List<String> subjectIds) {
   /**
    * Maps the information from the data transfer object to a new student group entity.
    *
    * @return the new student group entity.
    */
   public StudentGroup map() {
-    return new StudentGroup(this.name, this.studentIds, this.gradeIds, this.tagIds);
+    return new StudentGroup(this.name, this.studentIds, this.gradeIds, this.tagIds,
+        this.studentIds);
   }
 }
