# server/src/main/java/de/uftos/entities/StudentGroup.java
@@ -56,6 +56,13 @@ public class StudentGroup {
   @OneToMany(mappedBy = "studentGroup")
   private List<Lesson> lessons;
 
+  @NotNull
+  @ManyToMany(fetch = FetchType.EAGER)
+  @JoinTable(name = "student_groups_subjects",
+      joinColumns = @JoinColumn(name = "student_groups_id"),
+      inverseJoinColumns = @JoinColumn(name = "subjects_id"))
+  private List<Subject> subjects;
+
   /**
    * Creates a new student group.
    * Used if the ID of the student group is known.
@@ -70,17 +77,19 @@ public class StudentGroup {
    * Creates a new student group.
    * Used if the ID of the student group isn't known.
    *
-   * @param name       the name of the student group.
-   * @param studentIds the IDs of the students that are part of the group.
-   * @param gradeIds   the IDs of the grade that are part of the student group.
-   * @param tagIds     the IDs of the tags associated with the student group.
+   * @param name        the name of the student group.
+   * @param studentIds  the IDs of the students that are part of the group.
+   * @param gradeIds    the IDs of the grade that are part of the student group.
+   * @param tagIds      the IDs of the tags associated with the student group.
+   * @param subjectsIds the IDs of the subjects associated with the student group.
    */
   public StudentGroup(String name, List<String> studentIds, List<String> gradeIds,
-                      List<String> tagIds) {
+                      List<String> tagIds, List<String> subjectsIds) {
     this.name = name;
     this.students = studentIds.stream().map(Student::new).toList();
     this.grades = gradeIds.stream().map(Grade::new).toList();
     this.tags = tagIds.stream().map(Tag::new).toList();
+    this.subjects = subjectsIds.stream().map(Subject::new).toList();
   }
 
   @Override
