# uftos-openapi-specs.json
@@ -1878,6 +1878,17 @@
     "/timeslots" : {
       "get" : {
         "operationId" : "getTimeslots",
+        "parameters" : [ {
+          "in" : "query",
+          "name" : "tags",
+          "required" : false,
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        } ],
         "responses" : {
           "200" : {
             "content" : {
@@ -3168,7 +3179,7 @@
         }
       },
       "StudentGroup" : {
-        "required" : [ "grades", "id", "name", "students", "tags" ],
+        "required" : [ "grades", "id", "name", "students", "subjects", "tags" ],
         "type" : "object",
         "properties" : {
           "grades" : {
@@ -3189,6 +3200,12 @@
               "$ref" : "#/components/schemas/Student"
             }
           },
+          "subjects" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Subject"
+            }
+          },
           "tags" : {
             "type" : "array",
             "items" : {
@@ -3198,7 +3215,7 @@
         }
       },
       "StudentGroupRequestDto" : {
-        "required" : [ "gradeIds", "name", "studentIds", "tagIds" ],
+        "required" : [ "gradeIds", "name", "studentIds", "subjectIds", "tagIds" ],
         "type" : "object",
         "properties" : {
           "gradeIds" : {
@@ -3211,6 +3228,12 @@
             "type" : "string"
           },
           "studentIds" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          },
+          "subjectIds" : {
             "type" : "array",
             "items" : {
               "type" : "string"
